attempt to fix graphic display of column transformer and model pipelines

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -782,6 +782,9 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import KNNImputer, SimpleImputer\n",
     "from sklearn.preprocessing import RobustScaler, OneHotEncoder\n",
+    "from sklearn import set_config\n",
+    "\n",
+    "set_config(display='diagram')\n",
     "\n",
     "# Define individual transformers\n",
     "Kimputer = KNNImputer(n_neighbors=7, weights='distance')\n",
@@ -1365,16 +1368,16 @@
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([3.52526188, 3.44115496, 3.42900705, 3.44734192, 3.44274092]),\n",
-       " 'score_time': array([0.12471485, 0.12151003, 0.12329006, 0.12118196, 0.12111521]),\n",
-       " 'test_neg_log_loss': array([-0.37703552, -0.37574438, -0.4147179 , -0.37227063, -0.40114907]),\n",
-       " 'train_neg_log_loss': array([-0.08168778, -0.08110296, -0.08118804, -0.08196683, -0.08201651]),\n",
-       " 'test_roc_auc': array([0.90413845, 0.90164068, 0.90266029, 0.90604222, 0.90215748]),\n",
-       " 'train_roc_auc': array([1.        , 1.        , 0.99999998, 1.        , 1.        ]),\n",
-       " 'test_accuracy': array([0.84930906, 0.84689625, 0.85432207, 0.86200088, 0.85432207]),\n",
-       " 'train_accuracy': array([1.        , 1.        , 0.99994516, 1.        , 0.99994516]),\n",
-       " 'test_balanced_accuracy': array([0.77300094, 0.76679895, 0.77770003, 0.78676801, 0.77400778]),\n",
-       " 'train_balanced_accuracy': array([1.        , 1.        , 0.99988693, 1.        , 0.9999638 ])}"
+       "{'fit_time': array([3.53332019, 3.45602107, 3.51004219, 3.57398915, 3.42068005]),\n",
+       " 'score_time': array([0.12626576, 0.11964512, 0.11981583, 0.12228608, 0.12026072]),\n",
+       " 'test_neg_log_loss': array([-0.34913315, -0.37477354, -0.35958331, -0.35595269, -0.37452316]),\n",
+       " 'train_neg_log_loss': array([-0.08145179, -0.08137829, -0.08168355, -0.08179767, -0.08176872]),\n",
+       " 'test_roc_auc': array([0.90594637, 0.90184767, 0.90317908, 0.90772952, 0.90175688]),\n",
+       " 'train_roc_auc': array([1., 1., 1., 1., 1.]),\n",
+       " 'test_accuracy': array([0.8528186 , 0.84536082, 0.85256692, 0.86243967, 0.85629662]),\n",
+       " 'train_accuracy': array([0.99994515, 1.        , 0.99989031, 1.        , 1.        ]),\n",
+       " 'test_balanced_accuracy': array([0.77777599, 0.7663999 , 0.7743878 , 0.78705762, 0.77469562]),\n",
+       " 'train_balanced_accuracy': array([0.9998869 , 1.        , 0.99977386, 1.        , 1.        ])}"
       ]
      },
      "execution_count": 6,
@@ -1443,73 +1446,73 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.447342</td>\n",
-       "      <td>0.121182</td>\n",
-       "      <td>-0.372271</td>\n",
-       "      <td>-0.081967</td>\n",
-       "      <td>0.906042</td>\n",
+       "      <th>0</th>\n",
+       "      <td>3.533320</td>\n",
+       "      <td>0.126266</td>\n",
+       "      <td>-0.349133</td>\n",
+       "      <td>-0.081452</td>\n",
+       "      <td>0.905946</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.862001</td>\n",
+       "      <td>0.852819</td>\n",
+       "      <td>0.999945</td>\n",
+       "      <td>0.777776</td>\n",
+       "      <td>0.999887</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.573989</td>\n",
+       "      <td>0.122286</td>\n",
+       "      <td>-0.355953</td>\n",
+       "      <td>-0.081798</td>\n",
+       "      <td>0.907730</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.862440</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.786768</td>\n",
+       "      <td>0.787058</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.510042</td>\n",
+       "      <td>0.119816</td>\n",
+       "      <td>-0.359583</td>\n",
+       "      <td>-0.081684</td>\n",
+       "      <td>0.903179</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.852567</td>\n",
+       "      <td>0.999890</td>\n",
+       "      <td>0.774388</td>\n",
+       "      <td>0.999774</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.420680</td>\n",
+       "      <td>0.120261</td>\n",
+       "      <td>-0.374523</td>\n",
+       "      <td>-0.081769</td>\n",
+       "      <td>0.901757</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.856297</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.774696</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3.441155</td>\n",
-       "      <td>0.121510</td>\n",
-       "      <td>-0.375744</td>\n",
-       "      <td>-0.081103</td>\n",
-       "      <td>0.901641</td>\n",
+       "      <td>3.456021</td>\n",
+       "      <td>0.119645</td>\n",
+       "      <td>-0.374774</td>\n",
+       "      <td>-0.081378</td>\n",
+       "      <td>0.901848</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.846896</td>\n",
+       "      <td>0.845361</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.766799</td>\n",
+       "      <td>0.766400</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3.525262</td>\n",
-       "      <td>0.124715</td>\n",
-       "      <td>-0.377036</td>\n",
-       "      <td>-0.081688</td>\n",
-       "      <td>0.904138</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.849309</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.773001</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3.442741</td>\n",
-       "      <td>0.121115</td>\n",
-       "      <td>-0.401149</td>\n",
-       "      <td>-0.082017</td>\n",
-       "      <td>0.902157</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.854322</td>\n",
-       "      <td>0.999945</td>\n",
-       "      <td>0.774008</td>\n",
-       "      <td>0.999964</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.429007</td>\n",
-       "      <td>0.123290</td>\n",
-       "      <td>-0.414718</td>\n",
-       "      <td>-0.081188</td>\n",
-       "      <td>0.902660</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.854322</td>\n",
-       "      <td>0.999945</td>\n",
-       "      <td>0.777700</td>\n",
-       "      <td>0.999887</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1518,25 +1521,25 @@
       ],
       "text/plain": [
        "   fit_time  score_time  test_neg_log_loss  train_neg_log_loss  test_roc_auc  \\\n",
-       "3  3.447342    0.121182          -0.372271           -0.081967      0.906042   \n",
-       "1  3.441155    0.121510          -0.375744           -0.081103      0.901641   \n",
-       "0  3.525262    0.124715          -0.377036           -0.081688      0.904138   \n",
-       "4  3.442741    0.121115          -0.401149           -0.082017      0.902157   \n",
-       "2  3.429007    0.123290          -0.414718           -0.081188      0.902660   \n",
+       "0  3.533320    0.126266          -0.349133           -0.081452      0.905946   \n",
+       "3  3.573989    0.122286          -0.355953           -0.081798      0.907730   \n",
+       "2  3.510042    0.119816          -0.359583           -0.081684      0.903179   \n",
+       "4  3.420680    0.120261          -0.374523           -0.081769      0.901757   \n",
+       "1  3.456021    0.119645          -0.374774           -0.081378      0.901848   \n",
        "\n",
        "   train_roc_auc  test_accuracy  train_accuracy  test_balanced_accuracy  \\\n",
-       "3            1.0       0.862001        1.000000                0.786768   \n",
-       "1            1.0       0.846896        1.000000                0.766799   \n",
-       "0            1.0       0.849309        1.000000                0.773001   \n",
-       "4            1.0       0.854322        0.999945                0.774008   \n",
-       "2            1.0       0.854322        0.999945                0.777700   \n",
+       "0            1.0       0.852819        0.999945                0.777776   \n",
+       "3            1.0       0.862440        1.000000                0.787058   \n",
+       "2            1.0       0.852567        0.999890                0.774388   \n",
+       "4            1.0       0.856297        1.000000                0.774696   \n",
+       "1            1.0       0.845361        1.000000                0.766400   \n",
        "\n",
        "   train_balanced_accuracy  experiment  \n",
+       "0                 0.999887           1  \n",
        "3                 1.000000           1  \n",
-       "1                 1.000000           1  \n",
-       "0                 1.000000           1  \n",
-       "4                 0.999964           1  \n",
-       "2                 0.999887           1  "
+       "2                 0.999774           1  \n",
+       "4                 1.000000           1  \n",
+       "1                 1.000000           1  "
       ]
      },
      "execution_count": 7,
@@ -1567,16 +1570,16 @@
     {
      "data": {
       "text/plain": [
-       "fit_time                   3.457101\n",
-       "score_time                 0.122362\n",
-       "test_neg_log_loss         -0.388183\n",
-       "train_neg_log_loss        -0.081592\n",
-       "test_roc_auc               0.903328\n",
+       "fit_time                   3.498811\n",
+       "score_time                 0.121655\n",
+       "test_neg_log_loss         -0.362793\n",
+       "train_neg_log_loss        -0.081616\n",
+       "test_roc_auc               0.904092\n",
        "train_roc_auc              1.000000\n",
-       "test_accuracy              0.853370\n",
-       "train_accuracy             0.999978\n",
-       "test_balanced_accuracy     0.775655\n",
-       "train_balanced_accuracy    0.999970\n",
+       "test_accuracy              0.853897\n",
+       "train_accuracy             0.999967\n",
+       "test_balanced_accuracy     0.776063\n",
+       "train_balanced_accuracy    0.999932\n",
        "experiment                 1.000000\n",
        "dtype: float64"
       ]
@@ -1618,10 +1621,10 @@
     {
      "data": {
       "text/plain": [
-       "{'neg_log_loss': -0.3861578378689361,\n",
-       " 'roc_auc ': 0.9006724878223533,\n",
-       " 'accuracy': 0.8535162247927116,\n",
-       " 'balanced_accuracy': 0.7736430394525029}"
+       "{'neg_log_loss': -0.3726605119415672,\n",
+       " 'roc_auc ': 0.9001071540160003,\n",
+       " 'accuracy': 0.8546422356433616,\n",
+       " 'balanced_accuracy': 0.7731887435242397}"
       ]
      },
      "execution_count": 10,
